Fix Spring Boot packaging for Railway deployment

--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<finalName>starhealth</finalName>
+					 <mainClass>StarHealthApplication</mainClass>
 				</configuration>
+				<executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
 			</plugin>
 		</plugins>
 	</build>
