Fix main class path in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					 <mainClass>StarHealthApplication</mainClass>
+					 <mainClass>com.satheesh.starhealth.StarHealthApplication</mainClass>
 				</configuration>
 				<executions>
                     <execution>
